--- a/decidim-budgets/app/cells/decidim/budgets/budgets_list/show.erb
+++ b/decidim-budgets/app/cells/decidim/budgets/budgets_list/show.erb
@@ -1,14 +1,12 @@
-<div class="row">
-  <div class="columns medium-7 mediumlarge-8">
-    <% if (budgets - voted).any? %>
-      <div class="section" id="budgets-to-vote">
-        <h2 class="h5 md:h3 decorator mb-8">
-          <%= t(:budgets, scope: i18n_scope) %>
-        </h2>
+<% if (budgets - voted).any? %>
+  <div class="section" id="budgets-to-vote">
+    <h2 class="h5 md:h3 decorator mb-8">
+      <%= t(:budgets, scope: i18n_scope) %>
+    </h2>
 
-    <%= render :card_list %>
-  </div>
-<% end %>
+<%= render :card_list %>
+
+<%= decidim_paginate budgets %>
 
 <% if !voting_finished? && voted? %>
   <div class="section">
