--- a/decidim-core/app/views/decidim/shared/_filters.html.erb
+++ b/decidim-core/app/views/decidim/shared/_filters.html.erb
@@ -1,9 +1,25 @@
 <% filter_sections = [] unless local_assigns.has_key?(:filter_sections) %>
+<% search_label = t("decidim.searches.filters.search") unless local_assigns.has_key?(:search_label) %>
 
-<% if filter_sections.present? %>
+<% if filter_sections.present? || local_assigns.has_key?(:search_variable) %>
   <%= redesigned_filter_form_for filter, url_for, class: "self-stretch", data: { filters: "", component: "accordion" } do |form| %>
+
+    <% if local_assigns.has_key?(:search_variable) %>
+      <div class="filter-search filter-container">
+        <%= form.search_field search_variable,
+          label: false,
+          placeholder: search_label,
+          title: search_label,
+          "aria-label": search_label %>
+        <button type="submit" aria-controls="meetings" aria-label="<%= search_label %>">
+          <%= icon "search-line" %>
+        </button>
+      </div>
+    <% end %>
+
     <% filter_sections.each do |f| %>
       <%= form.collection_filter(**f) %>
     <% end %>
+
   <% end %>
 <% end %>
