Add condition to display modal preventing vote because limit exceded

--- a/decidim-budgets/app/cells/decidim/budgets/project_vote_button/show.erb
+++ b/decidim-budgets/app/cells/decidim/budgets/project_vote_button/show.erb
@@ -11,9 +11,8 @@
         disable: true,
         budget: model.budget_amount,
         allocation: resource_allocation,
-        dialog_open: !resource_added? ? '' : 'budget-excess',
         "redirect-url": resource_path
-      },
+      }.merge(modal_params),
       disabled: vote_button_disabled?,
       title: vote_button_label do %>
   <% if !resource_added? %>
