Fixing decidim-core specs

--- a/decidim-verifications/app/views/decidim/verifications/authorizations/index.html.erb
+++ b/decidim-verifications/app/views/decidim/verifications/authorizations/index.html.erb
@@ -3,7 +3,7 @@
 <% url_params = (redirect_url.present? ? { redirect_url: redirect_url } : {}) %>
 
 <% content_for :js_content do %>
-  <%= javascript_pack_tag "decidim_verifications" %>
+  <%= append_javascript_pack_tag "decidim_verifications" %>
 <% end %>
 
 <% content_for :css_content do %>
