--- a/decidim-conferences/app/views/decidim/conferences/registration_types/index.html.erb
+++ b/decidim-conferences/app/views/decidim/conferences/registration_types/index.html.erb
@@ -10,7 +10,7 @@ edit_link(
 %>
 
 <% content_for :js_content do %>
-  <%= javascript_pack_tag "decidim_conferences" %>
+  <%= append_javascript_pack_tag "decidim_conferences" %>
 <% end %>
 
 <% content_for :css_content do %>
