Partially fixing decidim-initiatives

--- a/decidim-initiatives/app/views/decidim/initiatives/initiatives/_form.html.erb
+++ b/decidim-initiatives/app/views/decidim/initiatives/initiatives/_form.html.erb
@@ -110,5 +110,5 @@
 <% end %>
 
 <% content_for :js_content do %>
-  <%= javascript_pack_tag "decidim_initiatives" %>
+  <%= append_javascript_pack_tag "decidim_initiatives" %>
 <% end %>
