--- a/decidim-budgets/app/views/decidim/budgets/projects/_order_progress.html.erb
+++ b/decidim-budgets/app/views/decidim/budgets/projects/_order_progress.html.erb
@@ -1,10 +1,12 @@
-<div class="layout-1col pt-8">
-  <div class="budget-summary__cols">
-    <div id="order-progress">
+<div id="order-progress">
+  <div class="layout-1col pt-8">
+    <div class="budget-summary__cols">
       <div class="budget-summary__content">
         <div class="budget-summary__progressbox" data-current-allocation="<%= current_order ? current_order.total : 0 %>">
           <% if include_heading && !current_order_checked_out? %>
-            <p><%= current_rule_description %></p>
+          <p>
+            <%= current_rule_description %>
+          </p>
           <% end %>
           <div class="budget-summary__progressbar">
             <div class="progress budget-progress" role="progressbar" aria-valuenow="<%= current_order_budget_percent %>" aria-valuetext="<%= current_order_budget_percent %>%" aria-valuemin="0" aria-valuemax="100">
@@ -14,46 +16,46 @@
               <div class="progress-meter budget-summary__progressbar--meter" style="width: <%= current_order_budget_percent %>%">
               </div>
             </div>
-
             <div class="budget-summary__progressbar-marks">
               <span class="budget-summary__progressbar-legend" style="width: <%= current_order_budget_percent_minimum %>%;">
                 <%= t("assigned", scope: "decidim.budgets.projects.order_progress") %>
                 <strong id="order-total-budget" class="budget-summary__progressbar-legend-strong">
                   <% if current_order.projects_rule? %>
-                    <%= current_order.projects.count %> / <%= current_order.maximum_projects %>
+                  <%= current_order.projects.count %> /
+                  <%= current_order.maximum_projects %>
                   <% else %>
-                    <%= budget_to_currency current_order&.total_budget.to_f %>
+                  <%= budget_to_currency current_order&.total_budget.to_f %>
                   <% end %>
                 </strong>
               </span>
               <% if current_order.minimum_budget > 0 %>
-                <span class="budget-summary__progressbar-legend budget-summary__progressbar-marks_center">
-                  <%= t("minimum", scope: "decidim.budgets.projects.order_progress") %>
-                  <strong class="budget-summary__progressbar-legend-strong">
-                    <%= budget_to_currency(current_order.minimum_budget) %>
-                  </strong>
-                </span>
+              <span class="budget-summary__progressbar-legend budget-summary__progressbar-marks_center">
+                <%= t("minimum", scope: "decidim.budgets.projects.order_progress") %>
+                <strong class="budget-summary__progressbar-legend-strong">
+                  <%= budget_to_currency(current_order.minimum_budget) %>
+                </strong>
+              </span>
               <% end %>
               <span class="budget-summary__progressbar-legend budget-summary__progressbar-marks_right" data-total-allocation="<%= current_order.available_allocation %>">
                 <%= t("budget", scope: "decidim.budgets.projects.order_progress") %>
                 <strong class="budget-summary__progressbar-legend-strong">
                   <% if current_order.projects_rule? %>
-                    <%= current_order.maximum_projects %>
+                  <%= current_order.maximum_projects %>
                   <% else %>
-                    <%= budget_to_currency(budget.total_budget) %>
+                  <%= budget_to_currency(budget.total_budget) %>
                   <% end %>
                 </strong>
               </span>
             </div>
           </div>
         </div>
-
         <div class="progressbox-fixed-wrapper justify-self-center justify-items-center" data-progressbox-fixed>
           <% if !current_order_checked_out? && voting_open? %>
-            <button class="button button__secondary button__xl" data-dialog-open="budget-confirm" <%= budget_confirm_disabled_attr %>>
-              <span><%= t(".vote") %></span>
-              <%= icon "check-line" %>
-            </button>
+          <button class="button button__secondary button__xl" data-dialog-open="budget-confirm" <%=budget_confirm_disabled_attr %>>
+            <span>
+              <%= t(".vote") %></span>
+            <%= icon "check-line" %>
+          </button>
           <% end %>
         </div>
       </div>
