--- a/decidim-accountability/app/views/decidim/accountability/results/index.html.erb
+++ b/decidim-accountability/app/views/decidim/accountability/results/index.html.erb
@@ -1,6 +1,4 @@
-<% content_for :js_content do %>
-  <%= javascript_pack_tag "decidim_accountability" %>
-<% end %>
+<%= append_javascript_pack_tag "decidim_accountability" %>
 
 <% content_for :css_content do %>
   <%= stylesheet_pack_tag "decidim_accountability", media: "all" %>
