--- a/decidim-budgets/app/views/decidim/budgets/budgets/index.html.erb
+++ b/decidim-budgets/app/views/decidim/budgets/budgets/index.html.erb
@@ -7,7 +7,9 @@
 <% end %>
 
 <% content_for :aside do %>
-  <h1 class="h1 decorator"><%= t("decidim.components.budgets.name") %></h1>
+  <h1 class="h1 decorator">
+    <%= t("name", scope: "decidim.components.budgets") %>
+  </h1>
 <% end %>
 
 <%= render layout: "layouts/decidim/shared/layout_two_col" do %>
