--- a/decidim-core/app/packs/stylesheets/decidim/_redesigned_filters.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/_redesigned_filters.scss
@@ -16,7 +16,7 @@
       }
 
       > svg{
-        @apply w-4 h-4 text-gray fill-current;
+        @apply w-4 h-4 text-gray-2 fill-current;
       }
 
       &[aria-expanded="false"] > svg:last-of-type,
