--- a/decidim-budgets/app/views/decidim/budgets/projects/show.html.erb
+++ b/decidim-budgets/app/views/decidim/budgets/projects/show.html.erb
@@ -32,42 +32,40 @@ edit_link(
     <%= render partial: "decidim/shared/static_map", locals: { icon_name: "projects", geolocalizable: project } %>
   <% end %>
   <%= cell("decidim/budgets/project_selected_status", project, as_label: true) %>
+  <h1 class="h1 decorator budget__definition-project__title">
+    <%= decidim_sanitize_editor translated_attribute project.title %>
+  </h1>
   <%= decidim_sanitize_editor translated_attribute project.description %>
   <%= cell "decidim/budgets/project_tags", project, context: { extra_classes: ["tags--project"] } %>
   <%= attachments_for project %>
   <%= linked_resources_for project, :proposals, "included_proposals" %>
   <%= linked_resources_for project, :results, "included_projects" %>
 
+  <div class="my-4 flex gap-x-1">
+    <%= cell "decidim/comments_button", nil %>
+  </div>
+
   <%= comments_for project, polymorphic: [project.budget] %>
   <div class="mt-8">
     <%# REDESIGN_PENDING: this value for the reference %>
     <%= resource_reference(project) %>
-    <%# REDESIGN_PENDING: same cell as acountability, use the previous values %>
-    <%#= cell "decidim/accountability/result_metadata", result, template: :show_footer %>
   </div>
   <% content_for :aside do %>
-    <div class="view-header">
-      <div id="project">
-        <div class="card extra">
-          <div class="card__content">
-            <%= cell("decidim/budgets/project_votes_count", project, layout: :one_line, class: "display-block") %>
+    <%= cell("decidim/budgets/project_votes_count", project, layout: :one_line, class: "display-block") %>
 
-            <% if voting_finished? %>
-              <%= cell("decidim/budgets/project_voted_hint", project, class: "display-block") %>
-            <% elsif voting_open? %>
-              <%= render partial: "project_budget_button", locals: { project: project } %>
-            <% end %>
+    <% if voting_finished? %>
+      <%= cell("decidim/budgets/project_voted_hint", project, class: "display-block") %>
+    <% elsif voting_open? %>
+      <%= render partial: "project_budget_button", locals: { project: project } %>
+    <% end %>
 
-            <span class="budget__definition-data__title">
-              <%= t("budget", scope: "decidim.budgets.projects.show") %>
-            </span>
-            <div class="budget__definition-data__number"><%= budget_to_currency project.budget_amount %></div>
-            <div class="blog__actions-right">
-              <%= render partial: "decidim/shared/follow_button", locals: { followable: project, large: false  } %>
-            </div>
-          </div>
-        </div>
-      </div>
+    <span class="budget__definition-data__title">
+      <%= t("budget", scope: "decidim.budgets.projects.show") %>
+    </span>
+    <div class="budget__definition-data__number"><%= budget_to_currency project.budget_amount %></div>
+    <div class="grid grid-cols-2">
+      <%= render partial: "decidim/shared/follow_button", locals: { followable: project, large: false  } %>
+      <%= cell "decidim/share_button", nil %>
     </div>
   <% end %>
 <% end %>
