include all in list

--- a/decidim-core/app/packs/stylesheets/decidim/_redesigned_search.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/_redesigned_search.scss
@@ -3,7 +3,11 @@
     @apply self-stretch;
 
     [id*="dropdown-menu"]{
-      @apply gap-0 divide-y divide-background-3 [&>*]:py-4 first:[&>*]:pt-0 last:[&>*]:pb-0 [&>*]:space-y-4;
+      @apply gap-0 divide-y divide-background-3 [&>*]:py-4 first:[&>*]:pt-0 last:[&>*]:pb-0 [&>*]:space-y-4 cursor-auto;
+
+      .is-empty{
+        @apply pointer-events-none opacity-25;
+      }
     }
   }
 
