--- a/decidim-budgets/app/cells/decidim/budgets/budgets_list/show.erb
+++ b/decidim-budgets/app/cells/decidim/budgets/budgets_list/show.erb
@@ -1,7 +1,7 @@
 <% if (budgets - voted).any? %>
   <div class="section" id="budgets-to-vote">
     <h2 class="h5 md:h3 decorator mb-8">
-      <%= t(:budgets, scope: i18n_scope) %>
+      <%= t(:my_budgets, scope: i18n_scope) %>
     </h2>
 
 <%= render :card_list %>
