--- a/decidim-templates/app/views/decidim/templates/admin/questionnaire_templates/_choose.html.erb
+++ b/decidim-templates/app/views/decidim/templates/admin/questionnaire_templates/_choose.html.erb
@@ -41,5 +41,5 @@
   </div>
 </div>
 
-<%= javascript_pack_tag "decidim_templates" %>
+<%= append_javascript_pack_tag "decidim_templates" %>
 <%= stylesheet_pack_tag "decidim_templates", media: "all" %>
