--- a/decidim-participatory_processes/app/views/decidim/participatory_processes/participatory_processes/_collection.html.erb
+++ b/decidim-participatory_processes/app/views/decidim/participatory_processes/participatory_processes/_collection.html.erb
@@ -1,5 +1,5 @@
 <section id="processes-grid" class="card__grid-container">
-  <h2 class="h5 md:h3 decorator"><%= t("active", scope: "decidim.participatory_processes.participatory_processes.filters.counters", count: collection.total_count) %></h2>
+  <h2 class="h5 md:h3 decorator"><%= t(params.dig(:filter, :with_date) || default_date_filter, scope: "decidim.participatory_processes.participatory_processes.filters.counters", count: collection.total_count) %></h2>
 
   <div class="card__grid-grid">
     <%= render(collection) %>
