Fix decidim-elections, decidim-votings

--- a/decidim-elections/app/views/decidim/elections/votes/new.html.erb
+++ b/decidim-elections/app/views/decidim/elections/votes/new.html.erb
@@ -64,10 +64,10 @@
 <% content_for :js_content do %>
 
   <% if preview_mode? %>
-    <%= javascript_pack_tag "decidim_elections_voter_setup_preview" %>
+    <%= append_javascript_pack_tag "decidim_elections_voter_setup_preview" %>
   <% else %>
-    <%= javascript_pack_tag "decidim_elections_voter_setup_vote" %>
+    <%= append_javascript_pack_tag "decidim_elections_voter_setup_vote" %>
   <% end %>
 
-  <%= javascript_pack_tag "decidim_elections_voter_new_vote" %>
+  <%= append_javascript_pack_tag "decidim_elections_voter_new_vote" %>
 <% end %>
