--- a/decidim-elections/app/views/decidim/elections/trustee_zone/elections/show.html.erb
+++ b/decidim-elections/app/views/decidim/elections/trustee_zone/elections/show.html.erb
@@ -20,7 +20,5 @@
 
   <%= render "decidim/elections/shared/broken_promises_modal" %>
 
-  <% content_for :js_content do %>
-    <%= javascript_pack_tag "decidim_elections_trustee_#{current_step}" %>
-  <% end %>
+  <%= append_javascript_pack_tag "decidim_elections_trustee_#{current_step}" %>
 <% end %>
