--- a/decidim-elections/app/views/decidim/elections/trustee_zone/trustees/show.html.erb
+++ b/decidim-elections/app/views/decidim/elections/trustee_zone/trustees/show.html.erb
@@ -99,6 +99,4 @@
   <% end %>
 </div>
 
-<% content_for :js_content do %>
-  <%= javascript_pack_tag "decidim_elections_trustee_trustee_zone" %>
-<% end %>
+<%= append_javascript_pack_tag "decidim_elections_trustee_trustee_zone" %>
