Fix decidim-elections, decidim-votings (#10422)
* Fix decidim-elections, decidim-votings

* fix more decidim-elections

* Fixing more decidim-elections

* more fixes in decidim-elections

--- a/decidim-elections/app/views/decidim/elections/trustee_zone/trustees/show.html.erb
+++ b/decidim-elections/app/views/decidim/elections/trustee_zone/trustees/show.html.erb
@@ -64,33 +64,34 @@
     <% if trustee.elections.any? %>
       <div class="table-scroll">
         <table class="table-list">
-        <thead>
-          <tr>
-            <th><%= t(".elections.list.election") %></th>
-            <th><%= t(".elections.list.voting_period") %></th>
-            <th><%= t(".elections.list.bb_status") %></th>
-            <th><%= t(".elections.list.action_required.name") %></th>
-          </tr>
-        </thead>
-        <tbody>
-          <% trustee.elections.each do |election| %>
+          <thead>
             <tr>
-              <td><%= present(election).title %></td>
-              <td><%= l(election.start_time, format: :decidim_short) %> - <%= l(election.end_time, format: :decidim_short) %></td>
-              <td><%= election.bb_status %></td>
-              <td>
-                <% if election.trustee_action_required? %>
-                  <%= link_to trustee_election_elections_path(election) do %>
-                    <%= t(".elections.list.action_required.true") %>
-                  <% end %>
-                <% else %>
-                  <%= t(".elections.list.action_required.false") %>
-                <% end %>
-              </td>
+              <th><%= t(".elections.list.election") %></th>
+              <th><%= t(".elections.list.voting_period") %></th>
+              <th><%= t(".elections.list.bb_status") %></th>
+              <th><%= t(".elections.list.action_required.name") %></th>
             </tr>
-          <% end %>
-        </tbody>
-      </table>
+          </thead>
+          <tbody>
+            <% trustee.elections.each do |election| %>
+              <tr>
+                <td><%= present(election).title %></td>
+                <td><%= l(election.start_time, format: :decidim_short) %> - <%= l(election.end_time, format: :decidim_short) %></td>
+                <td><%= election.bb_status %></td>
+                <td>
+                  <% if election.trustee_action_required? %>
+                    <%= link_to trustee_election_elections_path(election) do %>
+                      <%= t(".elections.list.action_required.true") %>
+                    <% end %>
+                  <% else %>
+                    <%= t(".elections.list.action_required.false") %>
+                  <% end %>
+                </td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
     <% else %>
       <div class="callout warning">
         <%= t(".elections.no_elections") %>
@@ -99,6 +100,4 @@
   <% end %>
 </div>
 
-<% content_for :js_content do %>
-  <%= javascript_pack_tag "decidim_elections_trustee_trustee_zone" %>
-<% end %>
+<%= append_javascript_pack_tag "decidim_elections_trustee_trustee_zone" %>
