--- a/decidim-budgets/app/views/decidim/budgets/projects/show.html.erb
+++ b/decidim-budgets/app/views/decidim/budgets/projects/show.html.erb
@@ -20,7 +20,12 @@ edit_link(
   <%= stylesheet_pack_tag "decidim_budgets" %>
 <% end %>
 
-<%= render partial: "exit_modal" %>
+<% if redesign_enabled? %>
+  <%= render partial: "redesigned_exit_modal" %>
+<% else %>
+  <%= render partial: "exit_modal" %>
+<% end %>
+
 <% content_for :item_header do %>
   <% unless voting_finished? %>
     <%= render partial: "budget_summary", locals: { include_heading: true, budget_project: true } %>
