--- a/decidim-core/app/packs/stylesheets/decidim/_redesigned_participatory_spaces.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/_redesigned_participatory_spaces.scss
@@ -12,7 +12,7 @@
   }
 
   &__container{
-    > :not([id^="html-block"]):not([data-process-hero]){
+    > :not([id^="html-block"]):not([data-process-hero]):not([id^="floating-helper"]){
       @apply container;
     }
 
