--- a/decidim-core/app/views/decidim/searches/_filters.html.erb
+++ b/decidim-core/app/views/decidim/searches/_filters.html.erb
@@ -8,7 +8,7 @@
 
 <div class="filter-container search__filter">
   <button id="dropdown-trigger" data-component="dropdown" data-target="dropdown-menu" data-auto-close="true">
-    <%= content_tag :span, t("decidim.searches.filters.jump_to"), class: "#{ 'is-active' if params.dig(:filter, :with_resource_type) == nil}" %>
+    <%= content_tag :span, t("decidim.searches.filters_small_view.filter_by"), class: "#{ 'is-active' if params.dig(:filter, :with_resource_type) == nil}" %>
     <% blocks.each do |elements| %>
       <% elements.each do |type, results| %>
         <%= content_tag :span, class: "#{ 'is-active' if params.dig(:filter, :with_resource_type) == type}" do %>
