fix test lint ERB

--- a/decidim-core/app/views/decidim/shared/_orders.html.erb
+++ b/decidim-core/app/views/decidim/shared/_orders.html.erb
@@ -5,7 +5,6 @@
         i18n_scope: i18n_scope,
         title: t("#{i18n_scope}.label"),
         role: "menuitem",
-        class: "button button__sm button__text-secondary #{order_name == order ? 'underline font-bold' : '' }"
-         %>
+        class: "button button__sm button__text-secondary #{order_name == order ? 'underline font-bold' : '' }" %>
   <% end %>
 </div>
