fix test lint ERB

--- a/decidim-budgets/app/cells/decidim/budgets/budget_list_item/show.erb
+++ b/decidim-budgets/app/cells/decidim/budgets/budget_list_item/show.erb
@@ -5,7 +5,7 @@
         <%= translated_attribute(title) %>
       </h3>
       <% if voted? %>
-        <%= icon "check-double-line", class: 'inline-block align-middle fill-success ml-2 h-[1.5em] w-[1.5em]' %>
+        <%= icon "check-double-line", class: "inline-block align-middle fill-success ml-2 h-[1.5em] w-[1.5em]" %>
       <% end %>
     <% end %>
 
