--- a/decidim-budgets/app/cells/decidim/budgets/budget_list_item/vote_action.erb
+++ b/decidim-budgets/app/cells/decidim/budgets/budget_list_item/vote_action.erb
@@ -2,10 +2,10 @@
   <%= link_to(
         budget_order_path(budget),
         method: :delete,
-        class: 'pl-4',
+        class: "pl-4",
         data: { confirm: t(:are_you_sure, scope: "decidim.budgets.projects.budget_summary") }
       ) do %>
-      <%= icon "delete-bin-line", class: 'inline-block align-middle text-gray fill-current' %>
+      <%= icon "delete-bin-line", class: "inline-block align-middle text-gray fill-current" %>
       <span class="inline-block align-middle underline text-alert">
         <%= t(:remove_vote, scope: i18n_scope) %>
       </span>
