--- a/decidim-budgets/app/views/decidim/budgets/projects/_budget_confirm.html.erb
+++ b/decidim-budgets/app/views/decidim/budgets/projects/_budget_confirm.html.erb
@@ -13,7 +13,7 @@
             <div class="card__list">
               <div class="card__list__content">
                 <div class="card__list-text">
-                  <%= link_to translated_attribute(project.title), resource_locator([budget, project]).path, class: 'card__list-title' %>
+                  <%= link_to translated_attribute(project.title), resource_locator([budget, project]).path, class: "card__list-title" %>
                 </div>
               </div>
               <div class="budget__card__list-project">
