--- a/decidim-budgets/app/views/decidim/budgets/projects/_order_progress.html.erb
+++ b/decidim-budgets/app/views/decidim/budgets/projects/_order_progress.html.erb
@@ -60,7 +60,7 @@
         </div>
         <div class="progressbox-fixed-wrapper justify-self-center justify-items-center" data-progressbox-fixed>
           <% if !current_order_checked_out? && voting_open? %>
-          <button class="button button__secondary button__xl" data-dialog-open="budget-confirm" <%=budget_confirm_disabled_attr %>>
+          <button class="button button__secondary button__xl" data-dialog-open="budget-confirm" <%= budget_confirm_disabled_attr %>>
             <span>
               <%= t(".vote") %></span>
             <%= icon "check-line" %>
