--- a/decidim-comments/app/cells/decidim/comments/comment/show.erb
+++ b/decidim-comments/app/cells/decidim/comments/comment/show.erb
@@ -39,4 +39,13 @@
       <%= render :replies %>
     <% end %>
   </div>
+
+  <% unless reloaded? %>
+    <% if current_user.present? %>
+      <%= cell("decidim/flag_modal", model, modal_id: "flagModalComment#{model.id}") %>
+    <% end %>
+    <% if model.authored_by?(current_user) %>
+      <%= cell("decidim/comments/edit_comment_modal_form", model) %>
+    <% end %>
+  <% end %>
 <% end %>
