--- a/decidim-budgets/app/cells/decidim/budgets/budgets_list/show.erb
+++ b/decidim-budgets/app/cells/decidim/budgets/budgets_list/show.erb
@@ -6,6 +6,8 @@
 
 <%= render :card_list %>
 
+<%= decidim_paginate budget_paginate %>
+
 <% if !voting_finished? && voted? %>
   <div class="section">
     <h2 class="h5 md:h3 decorator mb-8">
