--- a/decidim-comments/app/packs/stylesheets/comments.scss
+++ b/decidim-comments/app/packs/stylesheets/comments.scss
@@ -57,7 +57,17 @@
   @apply rounded-lg border-2 border-background p-4 pl-6;
 
   &__header{
-    @apply flex items-center gap-x-2 mb-2 -ml-[34px] relative z-10;
+    @apply flex items-center gap-x-2 mb-2 -ml-[calc(1.5rem+.75rem)] relative first:[&>span]:z-10;
+  }
+
+  /* overwrite default dropdown styles */
+  [data-target*="dropdown"]{
+    @apply md:flex w-auto cursor-pointer text-sm text-secondary;
+  }
+
+  /* overwrite default dropdown styles */
+  [id*="dropdown-menu"][aria-hidden="true"]{
+    @apply md:hidden;
   }
 
   &__footer-grid{
